# pointcloud

./: .pre-commit-config.yaml  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
data/: cdd.txt  result_C_points.txt
docker/: Dockerfile  cpoints.py  docker-compose.yml
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
point_cloud/: _modidx.py  core.py
