[project]
name = "point-cloud"
version = "0.1.0"
description = "Point cloud functions"
readme = "README.md"
requires-python = "==3.10.*"
dynamic = ["authors", "license", "keywords", "classifiers", "entry-points"]
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.3",
    "nbdev>=2.3.34",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"
